src/assets/sass/_layout.scss
.navbar {
  justify-content: center;
  font-style: normal;
  font-weight: 400;
  font-size: 18px;
  line-height: 21.53px;
  color: #2c3d50;
  transition: all 1s;

  position: fixed;
  width: 100%;
  height: 75px;
  z-index: 10;

  .logo {
    width: 46px;
    height: 45px;
    margin-left: 97px;
  }

  .nav {
    margin: 0 auto;
    height: 100%;

    ul {
      height: 100%;
      width: 100%;
    }
  }

  .main-nav {
    width: 100%;
    height: 100%;
    align-items: center;
    justify-content: center;
  }

  .main-nav li {
    margin: 0 30px;
    height: 100%;
    display: flex;
    align-items: center;
    justify-content: center;
  }

  .main-nav ul li a {
    color: #2c3d50;
  }

  .extra-options {
    margin-right: 151px;
  }

  .extra-options li {
    margin: 0 12.5px;
  }

  .extra-options li a {
    color: #2c3d50;
  }

  .scrolled {
    width: 100%;
  }

  .dropdown-shop {
    height: 100%;
    display: flex;
    align-items: center;
  }

  .dropdown-brand {
    height: 100%;
    display: flex;
    align-items: center;
  }
}

.navbar__hovermenu {
  display: none;
  position: fixed;
  width: 100%;
  height: 421px;
  z-index: 10;
  right: 0;
  top: 75px;
  background-color: #fff;
  justify-content: space-between;

  .navbar__hovermenu__options {
    margin: 0 auto;
    padding-top: 33px;
    width: 50%;
    align-items: flex-start;
    justify-content: space-around;
    height: 100%;

    .hovermenu__listitems h3 {
      font-style: normal;
      font-weight: normal;
      font-size: 22px;
      line-height: 26px;
      color: var(--text-color-dark);
      padding-bottom: 9px;
      border-bottom: 1px solid rgba(44, 61, 80, 0.08);
      margin-bottom: 33px;
    }

    .hovermenu__listitems ul li:not(:first-child) {
      padding-top: 26px;
    }

    .hovermenu__listitems ul li a {
      font-style: normal;
      font-weight: normal;
      font-size: 16px;
      line-height: 20px;
      color: rgba(44, 61, 80, 0.8);
    }
  }

  .hovermenu__image {
    height: 100%;
  }
}

.navbar__searchdiv {
  position: fixed;
  width: 100%;
  height: 289px;
  z-index: 2;
  top: 75px;
  background-color: #fff;

  .search__div {
    width: 100%;
    height: 100%;
    justify-content: center;
  }

  .closeIcon {
    position: absolute;
    top: 10px;
    right: 25px;
  }

  .searchIcon button {
    padding: 4px 10px;
    background: transparent;
    border: 1px solid;
    outline: none;
  }

  input {
    outline: none;
    border: none;
    width: 40%;
    margin: 0 25px;
    border-bottom: 1px solid;
    background: transparent;
    font-size: 18px;
    padding: 5px 5px;
  }

  input::placeholder {
    padding: 10px 0;
    margin: 10px 0;
  }
}

.sidemenu {
  position: fixed;
  top: 0px;
  right: 0px;
  height: 100%;
  width: 100%;
  background-color: #fff;
  z-index: 999;
  overflow-x: hidden;
  transition: all 0.5s;

  padding-bottom: 63px;

  .logo {
    width: 59px;
    height: 58px;
  }

  .top-area {
    width: 100%;
    justify-content: space-between;
    padding: 15px 20px;
  }

  .bottom-area {
    position: fixed;
    bottom: 0;
    width: 100%;
    justify-content: space-around;
    height: 63px;
    z-index: 999;
    background-color: #fff;
    border-top: 1px solid rgba(44, 61, 80, 0.08);

    li a {
      color: #2c3d50;
    }

    li {
      border-right: 1px solid rgba(44, 61, 80, 0.08);
    }
  }

  .accordian {
    width: 90%;
    margin: 0 auto;

    &-item {
      margin: 0;
    }

    &-item-header {
      padding-top: 26px;
      /* min-height: 3.5rem; */
      font-size: 18px;
      line-height: 22px;
      display: flex;
      align-items: center;
      position: relative;
      cursor: pointer;
      color: #2c3d50;

      &:after {
        /* content: "\002B"; */
        content: "\25B8";
        position: absolute;
        right: 1rem;
        font-size: 1.8rem;
        transition: transform 0.2s ease-in-out;
      }

      &.active::after {
        /* content: "\2212"; */
        transform: rotate(90deg);
      }
    }

    &-item-body {
      display: none;
      padding: 1rem;
      line-height: 1.5rem;
      /* border-top: 1px solid #34495e; */

      ul {
        flex-direction: column;
        align-items: flex-start;
      }
    }
  }

  .sidebar__searchdiv {
    width: 100%;
    height: 60%;
    align-items: flex-start;
    margin-top: 59px;
    justify-content: center;

    .closeIcon {
      position: absolute;
      right: 15%;
    }

    input {
      border: none;
      width: 80%;
      border-bottom: 1px solid black;
      outline: none;
      padding: 5px;
      font-size: 18px;
      line-height: 22px;
      color: #2c3d50;
    }
  }

  .sidebar-account {
    width: 90%;
    margin: 50px auto;

    .accordian {
      width: 90%;
      transition: 0.2s all;
      margin: 0;
    }

    li {
      margin: 20px 0;
    }

    .accordian-item-header {
      padding-top: 0;
      font-size: 17px;
    }

    .accordian-item-body {
      padding: 0.5rem 0;

      li {
        margin: 10px 15px;
      }
    }
  }
}

.main-nav {
  .dropdown-shop:hover .shop {
    display: flex;
  }
}

.main-nav {
  .dropdown-brand:hover .brand {
    display: flex;
  }
}

.accordian-item-header.active + .accordian-item-body {
  display: block;
}

.showcase {
  position: relative;
  background-image: url(../images/background.png);
  width: 100%;
  height: 100vh;
  background-position: top center;
  background-repeat: no-repeat;
  background-size: cover;
  color: #fff;

  .showcasedetails {
    width: 580px;
    height: 100%;
    justify-content: center;
    flex-direction: column;
    margin-left: 2rem;
    align-items: flex-start;

    &__text {
      margin-left: 50px;
      height: 171px;
      font-size: 48px;
      line-height: 57px;
      color: #2c3d50;
    }

    &__button button {
      margin-top: 25px;
      padding: 15px;
      background: transparent;
      outline: none;
      border: 1px solid #2c3d50;
      color: #fff;
      margin-left: 50px;
      font-family: Lora;
      font-style: normal;
      font-weight: normal;
      font-size: 18px;
      line-height: 23px;
      letter-spacing: 0.1em;
      color: #2c3d50;
    }

    &__button button:hover {
      cursor: pointer;
    }
  }
}

